# randomize-evolve

./: .gitignore  LICENSE  README.md  alternative_seeds.py  conftest.py  eval_wrapper.py  evaluator.py  heavy_hitters_evaluator.py  initial_program.py  initial_program_heavy_hitters.py  initial_program_packet_switching.py  initial_program_packet_switching_evolution.py  initial_program_prompt_cache.py  packet_switching_evaluator.py  prompt_cache_evaluator.py  pyproject.toml  run.py  run_demo.py  run_heavy_hitters.py  run_packet_switching.py  run_prompt_cache_compaction.py  run_set_membership.py  test_distributions.py
configs/: aggressive_exploration.yaml  bloom_alternatives.yaml  clustered_workload.yaml  heavy_hitters_workload.yaml  minimal_hints_workload.yaml  packet_switching_workload.yaml  power_law_workload.yaml  prompt_cache_compaction.yaml  uniform_workload.yaml
packet_switching_seeds/: column_pressure.py  exact_max_weight.py  input_aged_round_robin.py  max_weight_greedy.py  oldest_cell_first.py  oldest_cell_first_evolved.py  proportional_deficit.py  pure_islip.py  randomized_iterative.py  sticky_matching.py  weighted_islip.py
set_membership_seeds/: cuckoo_filter.py  fingerprint_probe.py  skeletal_distribution.py
tests/: conftest.py  test_bloom_alternatives.py  test_compact_cuckoo.py  test_cost_tracking.py  test_cuckoo_baseline.py  test_distributions.py  test_evaluator_entry.py  test_heavy_hitters_evaluator.py  test_openevolve_database_patch.py  test_packet_switching.py  test_prompt_cache_compaction.py  test_run_packet_switching.py  test_run_set_membership.py
(+22 files in other folders)
