[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "randomize-evolve"
version = "0.1.0"
description = "Evaluation tooling for OpenEvolve experiments searching for Bloom filter alternatives."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Paul Tune" }
]
keywords = ["open-evolve", "evolutionary-computation", "bloom-filter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "loguru>=0.7",
  "pydantic>=2",
  "openevolve>=0.2.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[project.urls]
homepage = "https://github.com/ptuls/randomize-evolve"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/randomize_evolve"]
